--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,14 @@ html{
 }
 
 body{
-    /*background-color: antiquewhite;*/
+    margin: 0 auto;
+    max-width: 500px;
+    max-height:550px ;
 }  
 
 #container{
-    width: 600px;
-    height: 700px;
+    width: 500px;
+    height: 550px;
     border: 1px solid transparent;
     background-color:#ffff;
 }
@@ -18,7 +20,9 @@ body{
     width: 100%;
     height: 150px;
     display:flex;
-    top:auto;
+    top: 0px;
+    left: 0px;
+    right: 0;
 }
 
 #language-option{
@@ -97,3 +101,8 @@ background-color: green;
 color: white;
 }
   
+@media only screen and (max-width: 500px) {
+    #container {
+      width:500px;
+      height: 550px;
+    }
