--- a/styles.css
+++ b/styles.css
@@ -101,8 +101,9 @@ background-color: green;
 color: white;
 }
   
-@media only screen and (max-width: 500px) {
+@media (max-width: 300px) {
     #container {
-      width:500px;
-      height: 550px;
+      width:300px;
+      height: 300px;
+      align-items: center;
     }
