--- a/styles.css
+++ b/styles.css
@@ -104,8 +104,9 @@ color: white;
   
 @media (max-width: 300px) {
     #container {
-      width:300px;
-      height: 300px;
+      width:500px;
+      height: 500px;
       align-items: center;
       margin: 0;
+    }
     }
