--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,14 @@ html{
 
 body{
     margin: 0 auto;
-    max-width: 300px;
-  /* max-height:350px ;*/
+    width: 300px;
+    height:550px ;
     position:absolute;
 }  
 
 #container{
     width: 500px;
-    height: 500px;
+    height: 550px;
     border: 1px solid transparent;
     background-color:#eee;
 }
@@ -105,7 +105,7 @@ color: white;
 @media (max-width: 300px) {
     #container {
       width:500px;
-      height: 500px;
+      height: 550px;
       align-items: center;
       margin: 0;
     }
