--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@ body{
     margin: 0 auto;
     width: 300px;
     height:550px ;
-    position:absolute;
+    position:fixed;
+    
+
 }  
 
 #container{
