--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ body{
 }  
 
 #container{
-    width: 500px;
-    height: 550px;
+    width: 100%;
+    height: 100%;
     border: 1px solid transparent;
     background-color:#eee;
 }
