--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,7 @@ color: white;
           align-items: center;
           margin: 0;
           position: inherit;
+          margin-bottom: 2px;
         }
     }
         
