--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body{
     height: 100%;
     border: 1px solid transparent;
     background-color:#eee;
+    margin-bottom: 0px auto;
 }
 
 .fb-logo{
@@ -117,6 +118,7 @@ color: white;
           margin: 0;
           position: inherit;
           margin-bottom: 2px;
+          
         }
     }
         
